--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 _temp/
 _learning/
+Examples/
 build-Sokoban-Desktop_Qt_5_12_3_MSVC2017_64bit-Debug/
+build-Sokoban-Desktop_Qt_5_12_3_MSVC2017_64bit-Release/
+Source/Array2D_var2.h
